# passwd-memory-points

./: README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
dist-isolation/: index.js
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  core.rs  error.rs  lib.rs  main.rs  status.rs  utils.rs
src-tauri/src/commands/: add_commands.rs  config_commands.rs  del_commands.rs  dto.rs  get_commands.rs  list_commands.rs  search_commands.rs  update_commands.rs
src-tauri/src/commands/dto/: config.rs  passwd.rs
src-tauri/src/core/: config.rs  crypt.rs  error.rs  nickname.rs  passwd.rs  passwd_manager.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/status/: passwd_vector_status.rs
src-tauri/src/utils/: file_operator.rs  passwd_vec_utils.rs
src/app/: App.tsx
src/app/components/: passwd_list.tsx
src/app/components/dialog/: DeleteConfirmDialog.tsx  add_passwd_dialog.tsx  change_secret.dialog.tsx  decrypt_dialog.tsx  nickname_decrypt.tsx  update_passwd_dialog.tsx
src/app/components/pages/: config_page.tsx  nickname_page.tsx  passwd_list_page.tsx
src/app/components/pages/dispacher/: passwd_dispacher.tsx
src/app/components/ui/: InternalFilePicker.tsx  autocomplete-input.tsx  dialog.tsx  scroll-area.tsx
src/app/tauri_core/: command_frontend.ts  import_export_config.ts  passwd_list_page.ts
src/styles/: theme.css
