[package]
name = "passwd-memory-points-tauri"
version = "1.0.2"
description = "password memory points manager tool."
authors = ["Evanflare"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "passwd_memory_points_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["isolation"] }

[dependencies]
tauri = { version = "2", features = ["isolation"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
passwd-memory-point = { package = "passwd-memory-point", path = 'D:\Programming\Rust\workspace\rust_study\passwd-nickname' }
thiserror = "2"
dirs = "6.0.0"
tauri-plugin-dialog = "2"
