[package]
name = "passwd-memory-points-tauri"
version = "1.0.2"
description = "password memory points manager tool."
authors = ["Evanflare"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "passwd_memory_points_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["isolation"] }

[dependencies]
tauri = { version = "2", features = ["isolation"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
chacha20poly1305 = "0.10.1"
sysdirs = { version = "0.9.4", features = ["android-auto"] }
hex = "0.4.3"
thiserror = "2.0.18"
toml = "1.1.2"
rand = "0.10.1"
rpassword = "7.5.3"
[dependencies.uuid]
version = "1.23.1"
# Lets you generate random UUIDs
features = ["v4"]

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-android-fs = "28.2.0"
